# secret-santa

./: .gitignore  README.md  pyproject.toml
data/: example.gml  example.json
src/secret-santa/: main.py  secret_santa_core.py
src/secretsanta/: __init__.py  create_family_graph.py  main.py  secret_santa_core.py
